# bitmask-core

./: .commands  .dockerignore  .env  .gitignore  Cargo.toml  README.md  RGB_LIB_IDs.toml  build-debug.sh  build-segwit.sh  build.rs  build.sh  docker-compose.yml  file_hashes.toml  rust-toolchain.toml
.github/workflows/: rust.yaml
docker/bitmask/: Dockerfile  Dockerfile.ST120
docker/esplora/: Dockerfile  bitcoin.conf
docker/nginx/: nginx.conf
docker/rgb-proxy/: Dockerfile
lib/ts/: bitcoin.ts  carbonado.ts  index.ts  nostr.ts  package.json  rgb.ts
lib/web/: .gitignore  README.md  bitcoin.ts  constants.ts  index.ts  lightning.ts  package-lock.json  package.json  rgb.ts  tsconfig.json
regtest/: new_block.sh  send_coins.sh
src/: bitcoin.rs  carbonado.rs  constants.rs  data.rs  error.rs  lib.rs  lightning.rs  nostr.rs  operations.rs  proxy.rs  regtest.rs  rgb.rs  structs.rs  util.rs  utils.rs  validators.rs  web.rs
src/bitcoin/: assets.rs  keys.rs  payment.rs  psbt.rs  wallet.rs
src/carbonado/: constants.rs  error.rs  metrics.rs
src/data/: constants.rs  structs.rs
src/operations/: bitcoin.rs  carbonado.rs  lightning.rs  mod.rs  rgb.rs  rgb_legacy.rs  util.rs
src/operations/bitcoin/: assets.rs  balance.rs  mod.rs  psbt.rs  secret.rs  send_sats.rs  sign_psbt.rs
src/operations/carbonado/: retrieve.rs  store.rs
src/operations/lightning/: mod.rs
src/operations/rgb/: accept.rs  accept_transaction.rs  constants.rs  create_psbt.rs  descriptor_wallet.rs  import_asset.rs  init.rs  invoice.rs  issue.rs  issue_asset.rs  issue_contract.rs  issuer_contract.rs  legacy.rs  pay.rs  psbt.rs  receive_tokens.rs  resolvers.rs  rpc.rs  schemas.rs  send_tokens.rs  shared.rs  validate_transaction.rs
src/operations/rgb_legacy/: accept_transaction.rs  create_psbt.rs  issue_asset.rs  legacy.rs  receive_tokens.rs  send_tokens.rs  validate_transaction.rs
src/rgb/: accept.rs  cambria.rs  carbonado.rs  commits.rs  consignment.rs  consignmnet.rs  constants.rs  contract.rs  crdt.rs  fs.rs  import.rs  issue.rs  prebuild.rs  prefetch.rs  proxy.rs  psbt.rs  resolvers.rs  schemas.rs  selection.rs  stock.rs  structs.rs  swap.rs  transfer.rs  wallet.rs  wallets.rs
tests/: _init.rs  asset.rs  blind.rs  init.rs  keys.rs  lib.rs  lightning.rs  migration.rs  nostr.rs  payjoin.rs  rgb.rs  rgb_contract.rs  rgb_invoice.rs  rgb_issue.rs  rgb_pay.rs  rgb_psbt.rs  rgb_stock.rs  rgb_test_utils.rs  rgb_test_utis.rs  wallet.rs  web_asset.rs  web_storage.rs  web_wallet.rs
tests/rgb/: utils.rs
tests/rgb/integration/: accept.rs  batch.rs  bench.rs  cambria.rs  coin_selection.rs  collectibles.rs  consecutive.rs  consig.rs  crdt.rs  drain.rs  dustless.rs  fungibles.rs  import.rs  inspect.rs  internal.rs  issue.rs  proxy.rs  rbf.rs  selection.rs  sign_hash.rs  states.rs  stress.rs  swaps.rs  transfer.rs  transfers.rs  udas.rs  utils.rs  utxo_selection.rs  wallet.rs  watcher.rs
tests/rgb/sre/: st130.rs  st130_web.rs  st140.rs  st140_web.rs  st150.rs  st150_web.rs  st160.rs  st160_web.rs
tests/rgb/unit/: amount.rs  commits.rs  invoice.rs  issue.rs  psbt.rs  schemas.rs  stl.rs  stock.rs  utils.rs
tests/rgb/web/: contracts.rs  imports.rs  inspect.rs  proxy.rs  schemas.rs  std.rs  stl_ids.rs  stl_load.rs  swaps.rs  transfers.rs  utils.rs
tests/scripts/: check_headless.sh  send_coins.sh  startup_node.sh  stop_node.sh
