[package]
name = "bitmask-core"
version = "0.6.0-rc.9"
authors = [
    "Jose Diego Robles <jose@diba.io>",
    "Hunter Trujillo <hunter@diba.io>",
    "Francisco Calderón <francisco@diba.io>",
]
description = "Core functionality for the BitMask wallet"
edition = "2021"
license = "MIT"
homepage = "https://bitmask.app"
repository = "https://github.com/diba-io/bitmask-core"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bitmaskd"
required-features = ["server"]

[features]
all = []
default = []
web = []
server = ["tokio/full", "tower-http/cors"]

[dependencies]
rgb-contracts = { version = "0.10.0-rc.2", default-features = false }
anyhow = "1.0.71"
amplify = "4.0.0"
argon2 = "0.5.0"
base64 = { package = "base64-compat", version = "1.0.0" }
bech32 = "0.9.1"
bip39 = { version = "2.0.0", features = ["rand"] }
bitcoin_30 = { package = "bitcoin", version = "0.30", features = ["base64"] }
bitcoin = { version = "0.29.2", features = ["base64"] }
bitcoin_hashes = "0.12.0"
bitcoin_scripts = "0.10.0-alpha.2"
bitcoin_blockchain = "0.10.0-alpha.2"
bp-core = { version = "~0.10.5", features = ["stl"] }
bp-seals = "~0.10.4"
commit_verify = { version = "~0.10.4", features = ["stl"] }
carbonado = "0.3.3"
console_error_panic_hook = "0.1.7"
descriptor-wallet = { version = "0.10.0-alpha.2", features = [
    "descriptors",
    "serde",
    "miniscript",
] }
futures = { version = "0.3.28", features = [
    "executor",
], default-features = true }
garde = { version = "0.11.2", features = ["derive"], default-features = false }
getrandom = { version = "0.2.10", features = ["js"] }
hex = "0.4.3"
indexmap = "1.9.3"
lightning-invoice = "0.23.0"
log = "0.4.17"
miniscript_crate = { package = "miniscript", version = "9.0.1", features = [
    "compiler",
] }
nostr-sdk = "0.22.0"
once_cell = "1.17.1"
payjoin = { version = "0.8.0", features = ["send"] }
percent-encoding = "2.2.0"
postcard = { version = "1.0.4", features = ["alloc"] }
pretty_env_logger = "0.5.0"
psbt = { version = "0.10.0-alpha.2", features = [
    "sign",
    "miniscript",
    "serde",
    "construct",
] }
regex = "1.7.0"
reqwest = { version = "0.11.18", features = ["json"] }
rgb-schemata = { version = "0.10.0-rc.1" }
rgb-std = { version = "0.10.2" }
rgb-wallet = { version = "0.10.3" }
serde = "1.0.152"
serde_json = "1.0.91"
serde-encrypt = "0.7.0"
strict_encoding = "~2.5"
strict_types = "~1.5"
thiserror = "1.0"
tokio = { version = "1.28.2", features = ["macros", "sync"] }
zeroize = "1.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bdk = { version = "0.28.0", features = [
    "use-esplora-async",
    "async-interface",
], default-features = false }
gloo-console = "0.2.3"
gloo-net = "0.3.0"
js-sys = "0.3.63"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.36"
web-sys = "0.3.63"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bdk = { version = "0.28.0", features = [
    "use-esplora-async",
    "async-interface",
    "reqwest-default-tls",
], default-features = false }
axum = { version = "0.6.17", features = ["headers"] }
axum-macros = "0.3.0"
deflate = "1.0.0"
esplora_block = { version = "0.5.0", package = "esplora-client", default-features = false, features = [
    "blocking",
] }
inflate = "0.4.5"
tower-http = { version = "0.4.0", features = ["cors"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[build-dependencies]
anyhow = "1.0.71"
rgb-std = { version = "0.10.2" }
serde = "1.0.164"
toml = { version = "0.7.5", features = ["preserve_order"] }

[patch.crates-io]
# TODO: Publish PR to official repos
# See: https://github.com/diba-io/bitmask-core/issues/204
bitcoin_scripts = { git = "https://github.com/crisdut/bp-foundation", branch = "release/0.10.0-alpha.2" }
bitcoin_blockchain = { git = "https://github.com/crisdut/bp-foundation", branch = "release/0.10.0-alpha.2" }
# TODO: Publish PR to official repos
# See: https://github.com/diba-io/bitmask-core/issues/204
psbt = { git = "https://github.com/crisdut/descriptor-wallet", branch = "exp/tapret-transfers" }
descriptor-wallet = { git = "https://github.com/crisdut/descriptor-wallet", branch = "exp/tapret-transfers" }
# TODO: Publish PR to official repos
# See: https://github.com/diba-io/bitmask-core/issues/204
rgb-contracts = { git = "https://github.com/crisdut/rgb", branch = "release/bmc-v0.6-rc7" }
rgb-wallet = { git = "https://github.com/crisdut/rgb-wallet", branch = "release/bmc-v0.6-rc7" }
rgb-std = { git = "https://github.com/crisdut/rgb-wallet", branch = "release/bmc-v0.6-rc7" }
