[package]
name = "bitmask-core"
version = "0.7.0-beta.10"
authors = [
    "Jose Diego Robles <jose@diba.io>",
    "Hunter Trujillo <hunter@diba.io>",
    "Francisco Calderón <francisco@diba.io>",
    "Armando Dutra <armando@diba.io>",
]
description = "Core functionality for the BitMask wallet"
edition = "2021"
license = "MIT"
homepage = "https://bitmask.app"
repository = "https://github.com/diba-io/bitmask-core"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bitmaskd"
required-features = ["server"]

[features]
all = []
default = []
web = []
server = ["tokio/full", "tower-http/cors"]

[dependencies]
anyhow = "1.0.75"
amplify = "4.5.0"
argon2 = "0.5.2"
automerge = "0.5.2"
autosurgeon = "0.8"
baid58 = "0.4.4"
base64 = { package = "base64-compat", version = "1.0.0" }
base85 = "2.0.0"
bech32 = "0.9.1"
bip39 = { version = "2.0.0", features = ["rand"] }
bitcoin_30 = { package = "bitcoin", version = "0.30", features = ["base64"] }
bitcoin = { version = "0.29.2", features = ["base64"] }
bitcoin_hashes = "0.13.0"
bitcoin_scripts = { version = "0.10.0", default-features = false }
bitcoin_blockchain = { version = "0.10.0", default-features = false }
blake3 = "1.5.0"
bp-core = { version = "0.10.11", features = ["stl"] }
bp-seals = "0.10.11"
carbonado = "0.3.6"
chrono = "0.4"
commit_verify = { version = "0.10.6", features = ["stl"] }
console_error_panic_hook = "0.1.7"
descriptor-wallet = { version = "0.10.1", features = [
    "serde",
    "miniscript",
], default-features = false }
futures = { version = "0.3.28", features = [
    "executor",
], default-features = true }
garde = { version = "0.16", features = ["derive"], default-features = false }
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
hex = "0.4.3"
indexmap = "2.0.2"
lightning-invoice = "0.26.0"
log = "0.4.20"
miniscript_crate = { package = "miniscript", version = "9.0.2", features = [
    "compiler",
] }
nostr-sdk = "0.25.0"
once_cell = "1.19.0"
payjoin = { version = "0.8.0", features = ["send"] }
postcard = { version = "1.0.7", features = ["alloc"] }
pretty_env_logger = "0.5.0"
psbt = { version = "0.10.0-alpha.2", features = [
    "sign",
    "miniscript",
    "serde",
    "construct",
] }
regex = "1.7.0"
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
rgb-std = { version = "0.10.9" }
rgb-wallet = { version = "0.10.9" }
rgb-schemata = { version = "0.10.1" }
rgb-contracts = { version = "0.10.2", default-features = false }
serde = "1.0.189"
serde_json = "1.0.107"
serde-encrypt = "0.7.0"
strict_encoding = "2.6.1"
strict_types = "1.6.3"
thiserror = "1.0"
tokio = { version = "1.33.0", features = ["macros", "sync"] }
zeroize = "1.6.0"
walkdir = "2.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bdk = { version = "0.28.2", features = [
    "use-esplora-async",
    "async-interface",
], default-features = false }
gloo-console = "0.3.0"
gloo-net = { version = "0.4.0", features = ["http"] }
gloo-utils = "0.2.0"
js-sys = "0.3.64"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bdk = { version = "0.28.2", features = [
    "use-esplora-async",
    "async-interface",
    "reqwest-default-tls",
], default-features = false }
axum = { version = "0.6.20", features = ["headers"] }
axum-macros = "0.3.8"
deflate = "1.0.0"
esplora_block = { version = "0.5.0", package = "esplora-client", default-features = false, features = [
    "blocking",
] }
inflate = "0.4.5"
sled = "0.34.7"
tower-http = { version = "0.4.4", features = ["cors"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"


[build-dependencies]
anyhow = "1.0.71"
blake3 = "1.4.1"
rgb-std = { version = "0.10.2" }
serde = "1.0.189"
toml = { version = "0.7.8", features = ["preserve_order"] }

[patch.crates-io]
# Remove after merge and release https://github.com/BP-WG/bitcoin_foundation/pull/20
bitcoin_scripts = { git = "https://github.com/crisdut/bp-foundation", branch = "feat/bump-amplify-4" }
bitcoin_blockchain = { git = "https://github.com/crisdut/bp-foundation", branch = "feat/bump-amplify-4" }

# Remove after merge and release https://github.com/BP-WG/descriptor-wallet/pull/75
psbt = { git = "https://github.com/crisdut/descriptor-wallet", branch = "feat/bump-amplify-4" }
descriptor-wallet = { git = "https://github.com/crisdut/descriptor-wallet", branch = "feat/bump-amplify-4" }

# Remove after merge and release https://github.com/RGB-WG/rgb-wallet/pull/108
rgb-wallet = { git = "https://github.com/crisdut/rgb-wallet", branch = "feat/improviments" }
rgb-std = { git = "https://github.com/crisdut/rgb-wallet", branch = "feat/improviments" }

# Remove after merge and release https://github.com/RGB-WG/rgb/pull/32
rgb-contracts = { git = "https://github.com/crisdut/rgb", branch = "feat/improviments" }
